--- a/controllers/license/Makefile
+++ b/controllers/license/Makefile
@@ -68,10 +68,10 @@ test: manifests generate fmt vet envtest ## Run tests.
 CONTROLLER_PKG=github.com/labring/sealos/controllers/pkg
 CONTROLLER_LICENSE=github.com/labring/sealos/controllers/license/internal
 build: manifests generate fmt vet ## Build manager binary.
-	LD_FLAGS=""; \
+	LD_FLAGS="-s -w"; \
 	[ -n "$(CRYPTOKEY)" ] && LD_FLAGS+="-X ${CONTROLLER_PKG}/crypto.encryptionKey=${CRYPTOKEY} -X ${CONTROLLER_PKG}/database.cryptoKey=${CRYPTOKEY}"; \
 	[ -n "$(LICENSE_KEY)" ] && LD_FLAGS+=" -X ${CONTROLLER_LICENSE}/util/key.EncryptionKey=${LICENSE_KEY}"; \
-	CGO_ENABLED=0 GOOS=linux GOARCH=${TARGETARCH} go build -ldflags "$${LD_FLAGS}" -o bin/manager cmd/manager/main.go
+	CGO_ENABLED=0 GOOS=linux GOARCH=${TARGETARCH} go build -ldflags "$${LD_FLAGS}" -trimpath -o bin/manager cmd/manager/main.go
 
 
 .PHONY: run
