--- a/frontend/providers/template/package.json
+++ b/frontend/providers/template/package.json
@@ -38,6 +38,7 @@
     "i18next": "^23.11.5",
     "immer": "^9.0.21",
     "js-cookie": "^3.0.5",
+    "js-interpreter": "^5.1.2",
     "js-yaml": "^4.1.0",
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
