fix: desktop role

--- a/controllers/user/config/rbac/user_editor_role.yaml
+++ b/controllers/user/config/rbac/user_editor_role.yaml
@@ -36,3 +36,21 @@ rules:
   - users/status
   verbs:
   - get
+- apiGroups:
+  - user.sealos.io
+  resources:
+  - usernamespaces
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - user.sealos.io
+  resources:
+  - usernamespaces/status
+  verbs:
+  - get
