--- a/controllers/user/deploy/manifests/rbac.yaml
+++ b/controllers/user/deploy/manifests/rbac.yaml
@@ -36,6 +36,24 @@ rules:
       - users/status
     verbs:
       - get
+  - apiGroups:
+      - user.sealos.io
+    resources:
+      - usernamespaces
+    verbs:
+      - create
+      - delete
+      - get
+      - list
+      - patch
+      - update
+      - watch
+  - apiGroups:
+      - user.sealos.io
+    resources:
+      - usernamespaces/status
+    verbs:
+      - get
 ---
 # permissions for end users to edit operationrequests.
 apiVersion: rbac.authorization.k8s.io/v1
