fix: desktop role

--- a/frontend/desktop/deploy/manifests/rbac.yaml
+++ b/frontend/desktop/deploy/manifests/rbac.yaml
@@ -12,6 +12,12 @@ rules:
   - apiGroups: ["user.sealos.io"]
     resources: ["operationrequests", "deleterequests"]
     verbs: ["create", "get"]
+  - apiGroups: ["user.sealos.io"]
+    resources: ["usernamespaces"]
+    verbs: ["list", "get", "create", "update", "patch", "watch"]
+  - apiGroups: ["user.sealos.io"]
+    resources: ["usernamespaces/status"]
+    verbs: ["list", "get", "create", "update", "patch", "watch"]
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
