--- a/deploy/cloud/manifests/cockroachdb.yaml
+++ b/deploy/cloud/manifests/cockroachdb.yaml
@@ -11,15 +11,15 @@ spec:
           - ReadWriteOnce
         resources:
           requests:
-            storage: "3Gi"
+            storage: "1Gi"
         volumeMode: Filesystem
   resources:
     requests:
-      cpu: 100m
-      memory: 0.5Gi
+      cpu: 5m
+      memory: 64Mi
     limits:
-      cpu: 1000m
-      memory: 2Gi
+      cpu: 50m
+      memory: 256Mi
   tlsEnabled: true
   cockroachDBVersion: v23.1.11
   nodes: 3
