--- a/service/launchpad/deploy/manifests/deploy.yaml
+++ b/service/launchpad/deploy/manifests/deploy.yaml
@@ -45,8 +45,8 @@ spec:
               protocol: TCP
           resources:
             limits:
-              cpu: 500m
-              memory: 1Gi
+              cpu: 50m
+              memory: 256Mi
             requests:
               cpu: 5m
               memory: 64Mi
