fix: golangci action need use `=` in flag and value > https://github.com/golangci/golangci-lint-action/tree/v8/?tab=readme-ov-file#args

--- a/.github/workflows/controllers.yml
+++ b/.github/workflows/controllers.yml
@@ -86,7 +86,8 @@ jobs:
         with:
           version: v2.3.0
           working-directory: ${{ matrix.workdir }}
-          args: --color always --config ${{ github.workspace }}/.golangci.yml
+          # args between =, not space
+          args: --color=always --config=${{ github.workspace }}/.golangci.yml
 
   image-build:
     runs-on: ubuntu-24.04
