--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,4 +74,5 @@ jobs:
         with:
           version: v2.3.0
           working-directory: ${{ matrix.workdir }}
-          args: --color always --config ${{ github.workspace }}/.golangci.yml
+          # args between =, not space
+          args: --color=always --config=${{ github.workspace }}/.golangci.yml
