autofix: account service

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -94,6 +94,8 @@ linters:
     errcheck:
       check-type-assertions: true
     forbidigo:
+      forbid:
+        - pattern: ^print(ln)?$
       analyze-types: true
     prealloc:
       for-loops: true
